Squashed 'backend/' changes from 81b47b8..4bddbc4
4bddbc4 fix frontend requests handling
b1d8ede handle sync calls to spotify api
6f8ec76 fix db
c052935 add tests
c697f48 test spoify auth handler
2d1f2e9 clean code
7e9b54d optimize error handling in spotify auth
e231a1c flow of auth and top track to spotify API
4509d24 fix tests
9f21307 fix login and mapper tests
f7ca9a1 add home controller test
902fe9a Add access token cache and renewal
bd4f8d4 Add top track dto flow
d86c087 set spotify refresh token retrieval
afb2118 docs: add documentation about switching to hexagonal architecture for home controller
6fcb01a add tests for registration process
476027b use sql exception to see if duplicate users
5bc0df6 fix: save register user
1a75b19 refactor register controller flow and controller test
e3155df create jdbc for db and hexagonal register flow
ef0351c add logger
46c4f5d refactor: split classes in hexagonal architecture
a651a04 clean code
3881b22 encrypt state and save it in cache
be9cfa1 refactor build client
50024d5 clean code

git-subtree-dir: backend
git-subtree-split: 4bddbc4263152b713787e90fb0ad20f5c4091d00
